// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests items render empty 1`] = `
<MovieItem
  genres={null}
  poster_path={null}
  release_date={null}
  title={null}
>
  <div
    className="movieItem"
  >
    <div
      className="movieItem__img"
      style={
        Object {
          "backgroundImage": "url(null)",
        }
      }
    />
    <div
      className="movieItem__info"
    >
      <div>
        <h3
          className="movieItem__title"
        />
        <h4
          className="movieItem__genre"
        />
      </div>
      <span
        className="movieItem__year"
      />
    </div>
  </div>
</MovieItem>
`;

exports[`tests items render with dates 1`] = `
<MovieItem
  genres={
    Array [
      "Comedy",
      "Drama",
      "Romance",
    ]
  }
  id={0}
  overview="string"
  poster_path="https://image.tmdb.org/t/p/w500/uC6TTUhPpQCmgldGyYveKRAu8JN.jpg"
  release_date="1995-02-01"
  tagline="string"
  title="Dilwale Dulhania Le Jayenge"
  vote_average={0}
  vote_count={0}
>
  <div
    className="movieItem"
  >
    <div
      className="movieItem__img"
      style={
        Object {
          "backgroundImage": "url(https://image.tmdb.org/t/p/w500/uC6TTUhPpQCmgldGyYveKRAu8JN.jpg)",
        }
      }
    />
    <div
      className="movieItem__info"
    >
      <div>
        <h3
          className="movieItem__title"
        >
          Dilwale Dulhania Le Jayenge
        </h3>
        <h4
          className="movieItem__genre"
        >
          <span
            key="Comedy"
          >
            Comedy
             
          </span>
          <span
            key="Drama"
          >
            Drama
             
          </span>
          <span
            key="Romance"
          >
            Romance
             
          </span>
        </h4>
      </div>
      <span
        className="movieItem__year"
      >
        1995
      </span>
    </div>
  </div>
</MovieItem>
`;
